# myshell2

./: CMakeLists.txt  README.md
dependencies/: apt.txt  conanfile.txt
inc/commands/: commands.hpp
inc/operations_with_files/: operations_with_files.hpp
inc/pipes/: pipes.hpp
src/: commands.cpp  main.cpp  pipes.cpp
src/mycat/: mycat.cpp  operations_with_files.cpp
